--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     }
     tr.highlight td {
       background-color: #0d0d0d;
-      color: #fff;
+      color: #000;
       font-weight: bold;
     }
     ul {
